# pdf-converter-cli

./: .gitignore  AGENTS.md  README.md  config.json  config.json.example  install.sh  main.py  pyproject.toml  run.sh
scripts/: convert_to_pdf.sh
src/pdf_converter/: __init__.py  __main__.py  app.py  config.py  screens.py
templates/: style.tex
